--- a/style.css
+++ b/style.css
@@ -23,13 +23,12 @@ body{
 }
 
 #profile2 h2{
-    text-align: left;
+    /* text-align:center ; */
     margin-bottom: 1em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: 200;
     line-height: 35px;
-    margin-right: 2em;
-    width: 50%;
+    font-weight: 10;
+    
 }
 
 #profile1 #prof-img{
@@ -50,10 +49,21 @@ body{
 }
 
 #profile2{
-    width: 80vh;
     padding: 2em;
     margin-top: .1em;
-    margin-right: 6em;
+    margin-right: 1em;
+}
+
+#profile1 button{
+    padding: 1.3em;
+    /* background-color: white; */
+    border-radius: .5em;
+    border: 1.6px solid rgb(81, 162, 212);
+    margin-left: 6em;
+    margin-top: 5em;
+    width: 70%;
+    font-weight: 600;
+
 }
 
 label{
@@ -111,19 +121,20 @@ input{
 }
 
 #profile2 #btn2{
-    background-color: rgba(85, 206, 254, 0.954);
+    background-color: rgb(52, 71, 83);
     font-weight: 600;
     border: none;
+    color: white;
 }
 
 
 #profile2 #btn2:hover{
     cursor: pointer;
-    background-color: rgb(56, 103, 133);
+    background-color: rgb(81, 162, 212);
     color: whitesmoke;
 }
 
-#profile2 #btn1:hover{
+#profile2 #btn1:hover,#profile1 button:hover{
     cursor: pointer;
     background-color: rgb(5, 33, 51);
     color: whitesmoke;
